fixes bug where certain buttons in the topbar wouldnt work on smaller screens

--- a/ember/app/styles/style.scss
+++ b/ember/app/styles/style.scss
@@ -267,16 +267,17 @@ body {
 	@include horizontal-dropshadow ;
 
 	h1 {
-		width: 300px;
+		width: 100px;
 		position: absolute;
 			top: 0;
 			left: 50%;
 
-		margin-left: -150px;
+		margin-left: -50px;
 		text-align: center;
 		font-size: 23px;
 		line-height: 30px;
 		font-weight: 500;
+		white-space: nowrap;
 	}
 
 	.settingsToggle {
